<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="35dp"
        android:text="@string/business_search"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />


    <AutoCompleteTextView
        android:id="@+id/keyword"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:hint="@string/keyword"
        android:completionThreshold="1"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toTopOf="@id/distance"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:hint="@string/distance"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/category_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyword" />

    <TextView
        android:id="@+id/category_textview"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/category_textview"
        app:layout_constraintBottom_toTopOf="@id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="404dp"
        android:entries="@array/Categories"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_textview"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="274dp"
        android:layout_height="19dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="252dp"
        android:text="Auto-Detect my Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/button"
        android:layout_width="101dp"
        android:layout_height="43dp"

        android:text="SUBMIT"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button2"
        android:layout_width="99dp"
        android:layout_height="42dp"

        android:text="CLEAR"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:text="Results"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/businessList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/businessList"
        android:layout_width="393dp"
        android:layout_height="99dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>